--- a/conandata.yml
+++ b/conandata.yml
@@ -32,6 +32,8 @@ patches:
   1.71.0:
     - patch_file: "patches/bcp_namespace_issues_1_71.patch"
       base_path: "boost_1_71_0"
+    - patch_file: "patches/jam_strings_1_71.patch"
+      base_path: "boost_1_71_0"
     - patch_file: "patches/boost_build_qcc_fix_debug_build_parameter.patch"
       base_path: "boost_1_71_0"
     - patch_file: "patches/boost_core_qnx_cxx_provide___cxa_get_globals.patch"
