--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 env:
    global:
-      - CONAN_REFERENCE: "vtk/8.2.0"
+      - CONAN_REFERENCE: "boost/1.71.0"
       - CONAN_USERNAME: "CHM"
       - CONAN_LOGIN_USERNAME: "chrismarsh"
       - CONAN_CHANNEL: "dev"
