--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8]
+        use-mpi: ["with-mpi","without-mpi"]
         cfg:
           - {os: "ubuntu-latest", compiler: "gcc", version: 7}
           - {os: "ubuntu-latest", compiler: "gcc", version: 8}
@@ -56,6 +57,15 @@ jobs:
           pip install conan --upgrade
           pip install conan_package_tools
           
+       - name: Install MPI
+        if: ${{ matrix.use-mpi  == 'with-mpi' }}
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            sudo apt-get install libopenmpi-dev
+          else
+            brew install openmpi
+          fi
+
       - name: env linux
         if: ${{ matrix.cfg.os  == 'ubuntu-latest' }}
         uses: allenevans/set-env@v2.0.0
@@ -76,6 +86,7 @@ jobs:
         env:
           CONAN_CURRENT_PAGE: ${{matrix.cfg.compiler}}_shared
           CONAN_REFERENCE: boost/${{ matrix.lib-version}}
+          USE_MPI: ${{ matrix.use-mpi }}
 
 
 
