--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,7 @@ jobs:
         if: ${{ matrix.use-mpi  == 'with-mpi' }}
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
+            sudo apt-get update
             sudo apt-get install libopenmpi-dev
           else
             brew install openmpi
