longer timeout + ensure apt is updated

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,7 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt-get update
+            sudo apt-get upgrade
             sudo apt-get install libopenmpi-dev
           else
             brew install openmpi
