--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt-get update
-            sudo apt-get upgrade
+            sudo env ACCEPT_EULA=Y apt-get upgrade -y
             sudo apt-get install libopenmpi-dev
           else
             brew install openmpi
